fix layout of mw-textfield; icon positioning, gap

--- a/mwui-stencil/src/components/mw-textfield/mw-textfield.css
+++ b/mwui-stencil/src/components/mw-textfield/mw-textfield.css
@@ -44,7 +44,7 @@ label {
 
 .input {
   display: flex;
-  gap: var(--mw-component-text-field-gap-horizontal-gap-within);
+  align-items: center;
   /* TODO: missing token */
   border-radius: var(--border-radius-standard-md);
   padding: var(--mw-component-text-field-padding-text-field-y) var(--mw-component-text-field-padding-text-field-x);
@@ -75,6 +75,14 @@ label {
 
 .focused.has-error {
   color: var(--mw-component-text-field-fg-error);
+}
+
+.icon-start {
+  margin-right: var(--mw-component-text-field-gap-horizontal-gap-within);
+}
+
+.icon-end {
+  margin-left: var(--mw-component-text-field-gap-horizontal-gap-within);
 }
 
 .input input {
